--- a/index.html
+++ b/index.html
@@ -1,20 +1,1 @@
-<!DOCTYPE html>
-<html lang=en>
-
-<head>
-    <meta charset=utf-8>
-    <meta http-equiv=X-UA-Compatible content="IE=edge">
-    <meta name=viewport content="width=device-width,initial-scale=1">
-    <link rel=icon href=/favicon.ico> <title>vue-component</title>
-    <link href=css/app.f03b28ad.css rel=preload as=style>
-    <link href=css/chunk-vendors.cefff06e.css rel=preload as=style>
-    <link href=js/app.a8e74526.js rel=preload as=script>
-    <link href=js/chunk-vendors.0d034b67.js rel=preload as=script>
-    <link href=css/chunk-vendors.cefff06e.css rel=stylesheet>
-    <link href=css/app.f03b28ad.css rel=stylesheet>
-</head>
-
-<body><noscript><strong>We're sorry but vue-component doesn't work properly without JavaScript enabled. Please enable it
-            to continue.</strong></noscript>
-    <div id=app></div>
-    <script src=js/chunk-vendors.0d034b67.js> </script> <script src=js/app.a8e74526.js> </script> </body> </html>
+<!DOCTYPE html><html lang=en><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1"><link rel=icon href=/favicon.ico><title>vue-component</title><link href=/css/app.bdb6fe20.css rel=preload as=style><link href=/css/chunk-vendors.abe30773.css rel=preload as=style><link href=/js/app.cbd47876.js rel=preload as=script><link href=/js/chunk-vendors.ef2ea7a8.js rel=preload as=script><link href=/css/chunk-vendors.abe30773.css rel=stylesheet><link href=/css/app.bdb6fe20.css rel=stylesheet></head><body><noscript><strong>We're sorry but vue-component doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id=app></div><script src=/js/chunk-vendors.ef2ea7a8.js></script><script src=/js/app.cbd47876.js></script></body></html>
